test/integration/integration/tests/apk-httproute-rewrite-path.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rewrite-path-httproute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: Default
  hostnames:
  - urlrewrite.gw.wso2.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /rewrite-path-api/1.0.0/prefix/one
      method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /rewrite-path-api/1.0.0/full/one
      method: GET
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
